--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ntseq",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Nucleotide sequence manipulation and analysis library for Node and the Browser",
   "author": "Keith Horwood",
   "license": "MIT",
@@ -11,6 +11,8 @@
   },
   "files": [
     "lib/",
+    "LICENSE",
+    "README.md"
   ],
   "keywords": [
     "nucleotide",
@@ -28,5 +30,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/keithwhor/NtSeq"
-  },
+  }
 }
