--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ntseq",
-  "version": "1.1.0-dev6",
+  "version": "1.1.0",
   "description": "Nucleotide sequence manipulation and analysis library",
   "author": "Keith Horwood",
   "license": "MIT",
